# metadata_fetch

./: .gitattributes  CMakeLists.txt  README.md  main.c  make_metadata_fetch.sh  makefile
.github/workflows/: cmake-multi-platform.yml
src/: main.c
